tests/declare_class/declare_class.exp
Library type error:
lib/test.js:8
  8:   foo(): string;
              ^^^^^^ Cannot extend mixins `_module.C` [1] with `D` because in property `foo` and then the return value, string [2] is incompatible with number [3].
  References:
    7: declare class D extends _module.C {
                               ^^^^^^^^^ [1]: mixins `_module.C`
    8:   foo(): string;
                ^^^^^^ [2]: string
    2:   foo(): number;
                ^^^^^^ [3]: number

Error: declare_class.js:8
  8: C.x = "";
           ^^ string [1] is incompatible with number [2].
  References:
    8: C.x = "";
             ^^ [1]: string
    8: C.x = "";
       ^^^ [2]: number

Error: declare_class.js:9
  9: C.foo("");
           ^^ string. This type is incompatible with the expected param type of
  3:     static foo(x: number): void;
                       ^^^^^^ number

Error: declare_class.js:12
 12: (C.name: number); // error, it's a string
      ^^^^^^ Cannot cast `C.name` to number because string [1] is incompatible with number [2].
  References:
    1: declare class C {
                     ^ [1]: string
   12: (C.name: number); // error, it's a string
                ^^^^^^ [2]: number

Error: declare_class.js:15
 15: new D(123); // error, number ~> string
           ^^^ number. This type is incompatible with the expected param type of
  5:     constructor(x: string): void;
                        ^^^^^^ string


Found 5 errors
